Fix height not enough lead layout bug.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -85,6 +85,10 @@
   width: 18rem;
 }
 
+.h-60x {
+  height: 15rem;
+}
+
 .screen-min-height {
   min-height: calc(100vh - 14.125rem);
 }
